# git-rt

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  project-map.html  project-map.js
.github/workflows/: ci.yml
bench/: term-render-bench.sh
crates/rt/: Cargo.toml
crates/rt-config/: Cargo.toml
crates/rt-config/src/: lib.rs
crates/rt-config/tests/: keybindings.rs
crates/rt-core/: Cargo.toml
crates/rt-core/src/: geom.rs  layout.rs  lib.rs
crates/rt-core/tests/: layout.rs
crates/rt-engine/: Cargo.toml
crates/rt-engine/src/: lib.rs  palette.rs  vtpane.rs
crates/rt-engine/tests/: echo.rs  engine_default.rs  history.rs  soak.rs
crates/rt-mux/: Cargo.toml
crates/rt-mux/src/: main.rs
crates/rt-session/: Cargo.toml
crates/rt-session/src/: lib.rs
crates/rt-session/tests/: controller.rs
crates/rt/src/: backend.rs  bg_effect.rs  blur.rs  clip_history.rs  damage.rs  input.rs  lib.rs  main.rs  manual.rs  menu.rs  preferences.rs  prefs_model.rs  render.rs  select.rs  x11_present.rs  xrender_backend.rs
crates/rt/src/chrome/: clip_history.rs  instruments.rs  manual.rs  menu.rs  mod.rs  prefs.rs  search.rs
crates/rt/tests/: cli_headless.rs  damage_pixel_identity.rs  input.rs  instrument_compositing.rs  prefs_native.rs  xrender_commands.rs
crates/rt/tests/common/: mod.rs
crates/vt-conformance/: Cargo.toml
crates/vt-conformance/corpus/: ls_color.bytes  progress.bytes  spiral_stress.bytes  tui_frame.bytes
crates/vt-conformance/examples/: parser_bench.rs
crates/vt-conformance/src/: lib.rs  spec.rs  vtterm.rs
crates/vt-conformance/tests/: parser.rs  replay.rs  spec.rs  vtterm_damage.rs  vtterm_fuzz.rs  vtterm_reflow.rs
crates/vt-parser/: Cargo.toml
crates/vt-parser/src/: lib.rs
crates/vt-term/: Cargo.toml
crates/vt-term/src/: lib.rs
docs/: ADR-0004-widget-toolkit.md  APPEARANCE.md  KNOWN_ISSUES.md  PORTING_LOG.md  REFERENCES.md  ROADMAP.md  TERMINATOR_BUGS.md  TERMINATOR_FEATURES.md  engine-divergence.md  own-engine-plan.md  remote-rendering-lessons.md  rt-mux.md  rt-security-performance-review-v0.3.3.md  vt-parser-design.md  vt-term-damage-design.md  vt-term-design.md  wishlist-plan.md
docs/superpowers/plans/: 2026-07-11-damage-based-rendering-phase-1.md  2026-07-12-damage-rendering-x11-present.md  2026-07-15-native-preferences.md  2026-07-24-anchored-selection.md  2026-07-24-clipboard-history.md  2026-07-24-drag-autoscroll-acceleration.md
docs/superpowers/specs/: 2026-07-11-damage-based-rendering-design.md  2026-07-13-mechanism-c-xrender-backend-design.md  2026-07-14-instrument-compositing-design.md  2026-07-24-anchored-selection-design.md  2026-07-24-drag-autoscroll-acceleration-design.md
